...
  @override
  _DocDashboardState createState() => _DocDashboardState();
}

class _DocDashboardState extends State<DocDashboard> {
  String currentUserEmail;
  String name = 'name',
      licno = 'licno',
      dst = 'dst',
      det = 'det',
      dept = 'dept',
      email = 'email',
      imgUrl = defaultImgUrl,
      qual = 'qual',
      userType = 'Doctor';

  void initializeAllParams() async {
    currentUserEmail = FirebaseAuth.instance.currentUser.email.toString();
    CollectionReference ref = FirebaseFirestore.instance.collection('Doctors');

...
              ),
              Row(
                mainAxisAlignment: MainAxisAlignment.spaceAround,
                children: [
                  Expanded(
                    child: GestureDetector(
                      key: Key('appointments'),
                      onTap: () {
                        Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (BuildContext context) =>
                                    ShowDocAppointments()));
...
                        cardColor: Colors.green,
                      ),
                    ),
                  ),
                  Expanded(
                    child: GestureDetector(
                      key: Key('updateProfile'),
                      onTap: () async {
                        await Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (BuildContext context) =>
                                    UpdateDocAccount()));
...
                    ),
                  ),
                ],
              ),

              ElevatedButton(
                key: Key('signOut'),
                      onPressed: () async {
                        FirebaseAuth.instance.signOut();
                        await Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (BuildContext context) =>
...
