...
              ),
              Row(
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  Expanded(
                    child: GestureDetector(
                      key: Key('addMeds'),
                      onTap: () async {
                        await Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (BuildContext context) => AddMeds()));
                        initializeAllParams();
...
                        cardColor: Colors.green,
                      ),
                    ),
                  ),
                  Expanded(
                    child: GestureDetector(
                      key: Key('addStaff'),
                      onTap: () async {
                        await Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (BuildContext context) => AddStaff()));
                        initializeAllParams();
...
              ),
              Row(
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  Expanded(
                      child: GestureDetector(
                    key: Key('patientList'),
                    onTap: () async {
                      await Navigator.push(
                          context,
                          MaterialPageRoute(
                              builder: (BuildContext context) =>
                                  ShowPatientList()));
...
                      parameter: 'Patients',
                      cardColor: Colors.amber[800],
                    ),
                  )),
                  Expanded(
                    child: GestureDetector(
                      key: Key('doctorList'),
                      onTap: () async {
                        await Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (BuildContext context) =>
                                    ShowDocList()));
...
                      parameter: 'Update Profile',
                      cardColor: Colors.lime[900],
                    ),
                  )),
                  Expanded(
                    child: GestureDetector(
                      key: Key('addDonor'),
                      onTap: () async {
                        await Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (BuildContext context) => AddDonor()));
                        initializeAllParams();
...
