...
  _PatientDashBoardState createState() => _PatientDashBoardState();
}

class _PatientDashBoardState extends State<PatientDashBoard> {
  String currentUserEmail;
  String name = 'name',
      age = 'age',
      gender = 'gender',
      applNo = 'applNo',
      email = 'email',
      nextAppointment = 'None',
      imgUrl = defaultImgUrl,
      userType = 'Patient';

...
                ),
              ),
              Row(
                children: [
                  Expanded(
                    child: GestureDetector(
                      key: Key('availableDoctors'),
                      onTap: () async {
                        await Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (BuildContext context) => ShowDocs()));
                        initializeAllParams();
...
